--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HRichEditor</string>
+    <string name="txt_not_out_5000words">不能超过5000字</string>
+    <string name="txt_click_btn_add_link">点击添加链接</string>
+    <string name="txt_edit_content">编辑内容</string>
 </resources>
