抽取核心代码为module

--- a/HRichEditorView/src/main/res/values/strings.xml
+++ b/HRichEditorView/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="link_copyright">请勿发布非法链接，后果自负</string>
     <string name="link_dont_null">链接不能为空</string>
     <string name="rich_click_add_txt">点击添加文字内容</string>
+    <string name="title_edit_title">编辑标题</string>
+    <string name="title_dont_null">标题不能为空</string>
 </resources>
